# DraftForge-AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  doc.md  pyproject.toml  railway.toml  render.yaml  requirements.txt  writer_ai.db
docs/: mini-app-analysis.md
tests/: test_api.py  test_import_safety.py  test_initdata.py  test_persistence.py  test_prompt_builder.py  test_rate_limit.py  test_text_utils.py
writer_ai_assistant/: __main__.py  api.py  config.py  doctor.py  handlers.py  initdata.py  menu_ui.py  openai_service.py  persistence.py  preferences.py  prompt_builder.py  rate_limit.py  serve.py  telegram_bot.py  templates.py  text_utils.py
