[project]
name = "writer-ai-assistant"
version = "0.1.0"
description = "Telegram AI writing assistant (Python + OpenAI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "python-telegram-bot>=21.0",
]

[project.scripts]
writer-ai-assistant = "writer_ai_assistant.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["writer_ai_assistant*"]
