[project]
name = "writer-ai-assistant"
version = "0.1.0"
description = "Telegram AI writing assistant (Python + OpenAI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
writer-ai-assistant = "writer_ai_assistant.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["writer_ai_assistant*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Prompt/instruction string literals are long by nature; line length isn't worth enforcing.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom relies on Depends()/Header() in argument defaults.
"writer_ai_assistant/api.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
